--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 a.nav-item.nav-link.active {
-  color: rgba(205,205,205)!important;
-  background-color: #343a40!important;
-  border-color: #343a40!important;
+  color: rgba(205, 205, 205) !important;
+  background-color: #343a40 !important;
+  border-color: #343a40 !important;
 }
 
 a.nav-item.nav-link {
-  color: rgba(205,205,205);
+  color: rgba(205, 205, 205);
 }
 
 a.nav-item.nav-link:hover {
@@ -17,16 +17,24 @@ a.nav-item.nav-link:hover {
 }
 
 body {
-  background-color: #1F2226;
-  color: rgba(205,205,205);
+  background-color: #1f2226;
+  color: rgba(205, 205, 205);
 }
 
 .alert-dark {
-  color: rgba(205,205,205);
+  color: rgba(205, 205, 205);
   background-color: #343a40;
   border-color: #343a40;
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(205,205,205);
+  color: rgba(205, 205, 205);
+}
+
+a {
+  color: rgb(101, 179, 252);
+}
+
+a:hover {
+  color: rgb(142, 200, 255);
 }
