--- a/src/charts.css
+++ b/src/charts.css
@@ -4,6 +4,17 @@
   }
 }
 
+:target::before {
+  content: '';
+  display: block;
+  height: 60px;
+  margin: -60px 0 0;
+}
+
+.dark-modal > .modal-content > .modal-footer {
+  border-top-color: #191919;
+}
+
 .dark-modal > .modal-content {
   background-color: #000;
 }
